# HELIOS

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  helios.toml.example  pyproject.toml
.github/: ci-config.json  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependabot-smoke.yml  dependency-review.yml  quality-gate.yml  release.yml  secret-scan.yml
docs/: REPO-PARITY-REPORT.md  architecture.md  index.md  quickstart.md
docs/compliance/: ai_act.md  ga4gh.md  iso15189.md
src/helios/: __init__.py  cli.py  config.py
src/helios/checks/: __init__.py  base.py  container_pinning.py  crypt4gh_output.py  mane_transcripts.py  reference_genome.py  vus_rate.py
src/helios/core/: __init__.py  audit_record.py  hasher.py  run_context.py  signer.py  storage.py
src/helios/dashboard/: app.py  models.py
src/helios/dashboard/routes/: __init__.py  reports.py  runs.py  stats.py
src/helios/dashboard/static/: index.html
src/helios/export/: __init__.py  json_export.py  pdf_export.py  rocrate.py
src/helios/export/templates/: compliance_report.html.j2
src/helios/integrations/: __init__.py  nextflow.py  nextflow_plugin.py  snakemake.py  snakemake_wrapper.py
tests/: conftest.py  test_audit_record.py  test_cli_and_routes.py  test_hasher.py  test_signer.py  test_storage_and_checks.py
tests/fixtures/: sample.bam.header  sample.nextflow.trace  sample.vcf
tests/test_checks/: test_container_pinning.py  test_mane_transcripts.py  test_reference_genome.py  test_vus_rate.py
tests/test_export/: test_pdf.py  test_rocrate.py  test_rocrate_branches.py
tests/test_integration/: test_dashboard_api.py  test_full_pipeline_audit.py
tests/test_integrations/: test_nextflow.py  test_nextflow_plugin.py  test_snakemake_wrapper.py
